--- a/app/Resources/views/nav/centers.html.twig
+++ b/app/Resources/views/nav/centers.html.twig
@@ -1,6 +1,5 @@
 <li><a href="{{ path('gospelcenterPage_home', {'center': 'lausanne'}) }}">Lausanne</a></li>
 <li><a href="{{ path('gospelcenterPage_home', {'center': 'annecy'}) }}">Annecy</a></li>
+<li><a href="{{ path('gospelcenterPage_home', {'center': 'jura'}) }}">Jura</a></li>
 {#<li><a href="{{ path('gospelcenterPage_home', {'center': 'montreux'}) }}">Montreux</a></li>#}
-{#<li><a href="{{ path('gospelcenterPage_home', {'center': 'jura'}) }}">Jura</a></li>#}
 <li><a href="http://www.gospel-center-montreux.org" target="_blank">Montreux</a></li>
-<li><a href="http://www.gcj.ch" target="_blank">Jura</a></li>
