--- a/src/gospelcenter/MediaBundle/Resources/views/Media/center.html.twig
+++ b/src/gospelcenter/MediaBundle/Resources/views/Media/center.html.twig
@@ -54,7 +54,7 @@
                             {% endif %}
                             <div class="hover">
                                 <div class="picto_play"></div>
-                                <span>Regarder la vidéo</span>
+                                <span>Écouter</span>
                             </div>
                             <div class="details">
                                 <h1>{{ celebration|speakers(app.request.locale) }}</h1>
@@ -68,7 +68,7 @@
             <a id="more" href="#more" data-apiUrl="../../api/center/{{ center.ref }}.json">
                 <div class="container">
                     <div class="bg">
-                        <span>Charger plus de vidéos</span>
+                        <span>Charger plus de célébrations</span>
                     </div>
                 </div>
             </a>
