--- a/src/gospelcenter/MediaBundle/Resources/views/Media/video.html.twig
+++ b/src/gospelcenter/MediaBundle/Resources/views/Media/video.html.twig
@@ -24,7 +24,11 @@
                     <time>{{ video.celebration.date|oneDate(app.request.locale) }}</time>
 
                     {% for speaker in video.celebration.speakers %}
-                        <h3>{{ speaker.person.firstname }} {{ speaker.person.lastname }}</h3>
+                        {% if speaker.person.pseudo == "" %}
+                            <h3>{{ speaker.person.firstname }} {{ speaker.person.lastname }}</h3>
+                        {% else %}
+                            <h3>{{ speaker.person.pseudo }}</h3>
+                        {% endif %}
                         <p class="function">{{ speaker.person.function }}</p>
                     {% endfor %}
 
