--- a/src/gospelcenter/PeopleBundle/Resources/views/AdminPerson/add.html.twig
+++ b/src/gospelcenter/PeopleBundle/Resources/views/AdminPerson/add.html.twig
@@ -49,6 +49,9 @@
                         {{ form_errors(form.lastname) }}
                     </fieldset>
 
+                    {{ form_widget(form.pseudo) }}
+                    {{ form_errors(form.pseudo) }}
+
                     {{ form_widget(form.function) }}
                     {{ form_errors(form.function) }}
 
