--- a/app/Resources/views/nav/social.html.twig
+++ b/app/Resources/views/nav/social.html.twig
@@ -5,6 +5,9 @@
 
 {% elseif center.ref == "annecy" %}
     <li><a target="_blank" id="facebook" class="icon" href="https://www.facebook.com/GCAnnecy">Facebook</a></li>
+{% elseif center.ref == "jura" %}
+    <li><a target="_blank" id="facebook" class="icon" href="https://www.facebook.com/groups/42834548595/">Facebook</a></li>
 {% else %}
+
 {% endif %}
 
