--- a/src/gospelcenter/MediaBundle/Resources/views/Media/audios.html.twig
+++ b/src/gospelcenter/MediaBundle/Resources/views/Media/audios.html.twig
@@ -25,7 +25,7 @@
                         {% endif %}
                         <div class="hover">
                             <div class="picto_play"></div>
-                            <span>Ecouter</span>
+                            <span>Écouter</span>
                         </div>
                         <div class="details">
                             <h1>{{ celebration|speakers(app.request.locale) }}</h1>
