--- a/src/gospelcenter/MediaBundle/Resources/views/Media/home.html.twig
+++ b/src/gospelcenter/MediaBundle/Resources/views/Media/home.html.twig
@@ -21,37 +21,73 @@
             <h1>Nos dernières célébrations</h1>
 
             {% for celebration in celebrations %}
-                <a href="{{ path('gospelcenterMedia_video', {'video': celebration.video.id}) }}">
-                    <div class="container">
-                        {% if celebration.image %}
-                            {% set tvImg = celebration.image.webPath %}
-                            <div class="image"
-                                 style="background-image: url('{{ asset(tvImg) }}')"
-                                 data-bg="{{ asset(tvImg)| imagine_filter('tv_wall') }}"
-                                 data-bg_2x="{{ asset(tvImg)| imagine_filter('tv_wall_2x') }}"
-                                 data-bg_tablet="{{ asset(tvImg)| imagine_filter('tv_wall_tablet') }}"
-                                 data-bg_tablet_2x="{{ asset(tvImg)| imagine_filter('tv_wall_tablet_2x') }}"
-                                 data-bg_mobile="{{ asset(tvImg)| imagine_filter('tv_wall_mobile') }}"
-                                 data-bg_mobile_2x="{{ asset(tvImg)| imagine_filter('tv_wall_mobile_2x') }}"
-                                    ></div>
-                            <div class="gradient"></div>
-                        {% else %}
-                            <div class="bg"></div>
-                        {% endif %}
-                        <div class="hover">
-                            <div class="picto_play"></div>
-                            <span>Regarder la vidéo</span>
-                        </div>
-                        <div class="details">
-                            <h1>{{ celebration|speakers(app.request.locale) }}</h1>
-                            {% if celebration.title != "" %}
-                                <span>{{ celebration.title }}</span>
+
+                {% if celebration.video %}
+
+                    <a href="{{ path('gospelcenterMedia_video', {'video': celebration.video.id}) }}">
+                        <div class="container">
+                            {% if celebration.image %}
+                                {% set tvImg = celebration.image.webPath %}
+                                <div class="image"
+                                     style="background-image: url('{{ asset(tvImg) }}')"
+                                     data-bg="{{ asset(tvImg)| imagine_filter('tv_wall') }}"
+                                     data-bg_2x="{{ asset(tvImg)| imagine_filter('tv_wall_2x') }}"
+                                     data-bg_tablet="{{ asset(tvImg)| imagine_filter('tv_wall_tablet') }}"
+                                     data-bg_tablet_2x="{{ asset(tvImg)| imagine_filter('tv_wall_tablet_2x') }}"
+                                     data-bg_mobile="{{ asset(tvImg)| imagine_filter('tv_wall_mobile') }}"
+                                     data-bg_mobile_2x="{{ asset(tvImg)| imagine_filter('tv_wall_mobile_2x') }}"
+                                        ></div>
+                                <div class="gradient"></div>
                             {% else %}
-                                <span>{{ celebration.date|oneDate(app.request.locale) }}</span>
+                                <div class="bg"></div>
                             {% endif %}
+                            <div class="hover">
+                                <div class="picto_play"></div>
+                                <span>Regarder la vidéo</span>
+                            </div>
+                            <div class="details">
+                                <h1>{{ celebration|speakers(app.request.locale) }}</h1>
+                                {% if celebration.title != "" %}
+                                    <span>{{ celebration.title }}</span>
+                                {% else %}
+                                    <span>{{ celebration.date|oneDate(app.request.locale) }}</span>
+                                {% endif %}
+                            </div>
                         </div>
-                    </div>
-                </a>
+                    </a>
+                {% elseif celebration.audio %}
+                    <a href="{{ path('gospelcenterMedia_audio', {'audio': celebration.audio.id}) }}">
+                        <div class="container">
+                            {% if celebration.image %}
+                                {% set tvImg = celebration.image.webPath %}
+                                <div class="image"
+                                     style="background-image: url('{{ asset(tvImg) }}')"
+                                     data-bg="{{ asset(tvImg)| imagine_filter('tv_wall') }}"
+                                     data-bg_2x="{{ asset(tvImg)| imagine_filter('tv_wall_2x') }}"
+                                     data-bg_tablet="{{ asset(tvImg)| imagine_filter('tv_wall_tablet') }}"
+                                     data-bg_tablet_2x="{{ asset(tvImg)| imagine_filter('tv_wall_tablet_2x') }}"
+                                     data-bg_mobile="{{ asset(tvImg)| imagine_filter('tv_wall_mobile') }}"
+                                     data-bg_mobile_2x="{{ asset(tvImg)| imagine_filter('tv_wall_mobile_2x') }}"
+                                        ></div>
+                                <div class="gradient"></div>
+                            {% else %}
+                                <div class="bg"></div>
+                            {% endif %}
+                            <div class="hover">
+                                <div class="picto_play"></div>
+                                <span>Regarder la vidéo</span>
+                            </div>
+                            <div class="details">
+                                <h1>{{ celebration|speakers(app.request.locale) }}</h1>
+                                {% if celebration.title != "" %}
+                                    <span>{{ celebration.title }}</span>
+                                {% else %}
+                                    <span>{{ celebration.date|oneDate(app.request.locale) }}</span>
+                                {% endif %}
+                            </div>
+                        </div>
+                    </a>
+                {% endif %}
             {% endfor %}
             <div class="clear"></div>
         </section>
