--- a/src/gospelcenter/PeopleBundle/Resources/views/AdminPerson/edit.html.twig
+++ b/src/gospelcenter/PeopleBundle/Resources/views/AdminPerson/edit.html.twig
@@ -58,6 +58,9 @@
                     {{ form_errors(form.lastname) }}
                 </fieldset>
 
+                {{ form_widget(form.pseudo) }}
+                {{ form_errors(form.pseudo) }}
+
                 {{ form_widget(form.function) }}
                 {{ form_errors(form.function) }}
 
