--- a/src/gospelcenter/PageBundle/Resources/views/Page/home.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/Page/home.html.twig
@@ -24,6 +24,10 @@
     <meta property="og:description" content="A PLACE WHERE MIRACLES HAPPEN!"/>
     <meta property="og:image" content="http://gc-{{ center.ref }}.org/images/FBshare_{{  center.ref }}.jpg"/>
     <meta property="og:type" content="website"/>
+
+    {% if center.ref == 'jura' %}
+        <link rel="alternate" type="application/rss+xml" href="http://feeds2.feedburner.com/GospelCenterJura" />
+    {% endif %}
 {% endblock %}
 
 {% block local_header %}
