change Facebook link for GCJura

--- a/app/Resources/views/nav/social.html.twig
+++ b/app/Resources/views/nav/social.html.twig
@@ -6,7 +6,7 @@
 {% elseif center.ref == "annecy" %}
     <li><a target="_blank" id="facebook" class="icon" href="https://www.facebook.com/GCAnnecy">Facebook</a></li>
 {% elseif center.ref == "jura" %}
-    <li><a target="_blank" id="facebook" class="icon" href="https://www.facebook.com/groups/42834548595/">Facebook</a></li>
+    <li><a target="_blank" id="facebook" class="icon" href="https://www.facebook.com/GCJura">Facebook</a></li>
 {% else %}
 
 {% endif %}
