add description meta for home page

--- a/src/gospelcenter/PageBundle/Resources/views/Page/home.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/Page/home.html.twig
@@ -18,6 +18,9 @@
 
 {% block meta %}
     {{ parent() }}
+
+    <meta name="Description" content="A PLACE WHERE MIRACLES HAPPEN!">
+
     <meta property="og:title" content="Gospel Center {{ center.name }}"/>
     <meta property="og:site_name" content="Gospel Center {{ center.name }}"/>
     <meta property="og:url" content="http://gc-{{ center.ref }}.org"/>
