Change name of Fional

--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/en/about.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/en/about.html.twig
@@ -196,7 +196,7 @@
         <article class="frame">
             <h1>Children and Youth</h1>
 
-            <p>Fiona Bland</p>
+            <p>Fiona Benavides</p>
 
             <a href="mailto:gospelkids@gc-lausanne.org">gospelkids@gc-lausanne.org</a>
         </article>
