--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/fr/about.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/fr/about.html.twig
@@ -209,7 +209,7 @@
         <article class="frame">
             <h1>Enfance et Jeunesse</h1>
 
-            <p>Fiona Bland</p>
+            <p>Fiona Benavides</p>
 
             <a href="mailto:gospelkids@gc-lausanne.org">gospelkids@gc-lausanne.org</a>
         </article>
