change name in staff section of GCAnnecy

--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/jura/fr/about.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/jura/fr/about.html.twig
@@ -192,7 +192,7 @@
         <article class="frame">
             <h1>Accueil</h1>
 
-            <p>Gwenaëlle Beutler</p>
+            <p>Nathalie Buchwalder</p>
         </article>
 
         <article class="frame">
