add english text for kids page

--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/en/youth.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/en/youth.html.twig
@@ -116,15 +116,13 @@
              data-img_mobile="{{ asset(customImg)| imagine_filter('blog_big_mobile') }}"
              data-img_mobile_2x="{{ asset(customImg)| imagine_filter('blog_big_mobile_2x') }}">
 
-        <h3>The English version will come soon.</h3>
+        <p>The Teens, is a place not to be missed for young people of 5th to 8th grade (Harmos). Key elements for this
+            group is to experience the presence and power of God as well as challenging moments, know the love of God
+            and develop new friendships.</p>
 
-        <p>Les Teens, c’est l’endroit à ne pas manquer pour les jeunes de la 5ème à la 8ème Harmos. Expérimenter la
-            présence et la puissance de Dieu, vivre des moments de défis, connaître l’amour de Dieu et développer de
-            nouvelles amitiés sont des points clés pour cette équipe.</p>
-
-        <p>Tout nouveau tout chaud, les teens c’est aussi « Out of the Box ». Un concept innovant qui a lieu une fois
-            par mois. Out of the Box, c’est sortir de sa boîte et de sa zone de confort avec un orateur du Gospel Center
-            qui vient partager son cœur et challenger cette jeune génération.</p>
+        <p>Brand new : the Teens is also "Out of the Box". An innovative concept that takes place once a month. Out
+            of the Box means coming out of your own box, out of your comfort zone with a speaker from the Gospel Center
+            who shares his/her heart and challenges this young generation.</p>
 
     </article>
 
@@ -172,20 +170,18 @@
              data-img_mobile="{{ asset(customImg)| imagine_filter('blog_big_mobile') }}"
              data-img_mobile_2x="{{ asset(customImg)| imagine_filter('blog_big_mobile_2x') }}">
 
-        <h3>The English version will come soon.</h3>
+        <p>Stay connected on Facebook and WhatsApp to be notified of parties and events organized by the Gospel Youth!
+            From age 13, Friday or Saturday between 7:30pm and 9:30pm. Where? Provence 4 or at the bowling or
+            McDonalds,… The Gospel Youth, totally revamped, is waiting for you!</p>
 
-        <p>Reste connecté sur facebook et branché à ton whats’app pour être informé des soirées et events du Gospel
-            Youth ! Dès 13 ans, vendredi ou samedi, de 19h30 à 21h30, à Provence 4, au bowling ou au McDo, le Gospel
-            Youth fait peau neuve et n’attend plus que toi !</p>
-
-        <p>Du fun, des moments de partages, des délires, la présence de Dieu et de la bonne louange seront au menu de
-            ces folles soirées ! Notre rêve est de faire la différence dans ce monde en suivant l’exemple de Jésus,
-            c’est le tien aussi ? Alors connecte-toi !</p>
+        <p>On the menu of these crazy evenings: fun, times of sharing, the presence of God and good worship! Our dream
+            is to make a difference in this world by following the example of Jesus. Is it also yours? Then get
+            connected!</p>
 
         <article class="frame">
-            <h1>Plus d'infos</h1>
+            <h1>More infos</h1>
 
-            <p>sur notre page facebook</p>
+            <p>on our Facebook Page</p>
 
             <p><a href="https://facebook.com/gylausanne" target="_blank">facebook.com/GYLausanne</a></p>
         </article>
