update jura about page

--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/jura/fr/about.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/jura/fr/about.html.twig
@@ -182,6 +182,14 @@
         </article>
 
         <article class="frame">
+            <h1>Coaching</h1>
+
+            <p>Pierre et Marie-Claude Crelier</p>
+
+            <a href="mailto:coaching@gc-jura.org">coaching@gc-jura.org</a>
+        </article>
+
+        <article class="frame">
             <h1>Secrétariat</h1>
 
             <p>Nathalie Buchwalder</p>
